Fixed missing certificates and updated year to 2023

--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
           <h3 class="mb-4 mt-3">Design Skills:</h3>
           <ul>
             <li class="d-inline-block pe-3 border-2 border-end">
-              Invision Freehand
+              Figma
             </li>
             <li class="d-inline-block ps-3 pe-3 border-2 border-end">
               Adobe Photoshop
@@ -158,28 +158,36 @@
         <div class="row m-5 certifications">
           <h3 class="mb-4 mt-3">Certifications:</h3>
           <div class="col certificate">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/031/324/original/result.png?1622574640"
-              alt="React Development Certificate"
-            />
+            <a href="https://www.shecodes.io/certificates/a36ebb5bd8cd58e76b853e68f8084b54" target="_blank">
+              <img
+                src="./images/react-certifcate.png"
+                alt="Advanced React Development Certificate"
+              />
+            </a>
           </div>
           <div class="col certificate">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/024/145/original/result.png?1618178743"
-              alt="Front End Development Certificate"
-            />
+            <a href="https://www.shecodes.io/certificates/526bd7463566f2afead0398d809f3c64" target="_blank">
+              <img
+                src="./images/webdev-certificate.png"
+                alt="Web Development Certificate"
+              />
+            </a>
           </div>
           <div class="col certificate">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/022/177/original/result.png?1610737752"
-              alt="Introduction To Coding Certificate"
-            />
+            <a href="https://www.shecodes.io/certificates/bcd4d5dbf1f7304f81e30ad28a617f60" target="_blank">
+              <img
+                src="./images/intro-certificate.png"
+                alt="Introduction To Coding Certificate"
+              />
+            </a>
           </div>
           <div class="col certificate">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/students/certificates/000/035/837/original/result.png?1628536091"
-              alt="Responsive Web Design Certificate"
-            />
+            <a href="https://www.shecodes.io/certificates/dcd0d00ebb64e8e8aa0a777619e19ed3" target="_blank">
+              <img
+              src="./images/responsive-certificate.png"
+              alt="Responsive Web Development Certificate"
+              />
+            </a>
           </div>
         </div>
         <!-- Certifications content ends -->
@@ -259,7 +267,7 @@
             class="fw-bold"
             >ACM</a
           >
-          2022 |
+          2023 |
           <a
             href="https://github.com/aileenchany/acm-portfolio-project"
             target="_blank"
